@@ -90,14 +90,6 @@ ALNUM_LITERAL	\"[^\"\n]*\"|\'[^\'\n]*\'
 	ppecho (" ");
 }
 
-<*>^"*".* |
-<*>^"/".* {
-	ppecho (" ");
-	if (cb_source_format != CB_FORMAT_FIXED) {
-		ppecho (yytext);
-	}
-}
-
 "PROCESS"		{ BEGIN PROCESS_STATE; }
 
 <PROCESS_STATE>{
@@ -491,11 +483,13 @@ start:
 			newline_count = 0;
 			return strlen (buff);
 		}
+		/*
 		if (n == 0 && cb_source_format != CB_FORMAT_FIXED) {
 			if (ipchar != ' ' && ipchar != '\n') {
 				buff[n++] = ' ';
 			}
 		}
+		*/
 		if (gotcr) {
 			if (ipchar != '\n') {
 				buff[n++] = '\r';
@@ -524,6 +518,10 @@ start:
 
 	/* nothing more to do with free format */
 	if (cb_source_format != CB_FORMAT_FIXED) {
+		if (buff[0] == '*' || buff[0] == '/') {
+			newline_count++;
+			goto start;
+		}
 		return n;
 	}
 
